--- a/_layouts/year-archive.html
+++ b/_layouts/year-archive.html
@@ -2,7 +2,7 @@
 layout: archive
 ---
 
-{% assign postsByMonth = year.items | group_by_exp:"post", "post.date | date: '%B'" %}
+{% assign postsByMonth = page.posts | group_by_exp:"post", "post.date | date: '%B'" %}
 
 <nav class="archive-nav" aria-label="year">
   <h2 class="archive-header">By year</h2>
