--- a/_includes/post-list.html
+++ b/_includes/post-list.html
@@ -1,4 +1,15 @@
+{% if post.external_url %}
+
+<a href="{{ site.baseurl }}{{ post.external_url }}">
+  <h4>{{ post.title }}
+  <small><time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: "%-d %B %Y" }}</time></small></h4>
+</a>
+
+{% else %}
+
 <a href="{{ site.baseurl }}{{ post.url }}">
   <h4>{{ post.title }}
   <small><time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: "%-d %B %Y" }}</time></small></h4>
 </a>
+
+{% endif %}
