--- a/_includes/post-list.html
+++ b/_includes/post-list.html
@@ -8,7 +8,7 @@
 
 {% else %}
 
-<a href="{{ site.baseurl }}/{{ post.url }}">
+<a href="{{ post.url }}">
   <h4>{{ post.title }}
   <small><time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: "%-d %B %Y" }}</time></small></h4>
 </a>
