--- a/_includes/post-list.html
+++ b/_includes/post-list.html
@@ -1,13 +1,13 @@
 {% if post.external_url %}
-
-<!--<a href="{{ post.external_url }}" onclick="sa_event('linked-{{ post.external_url | remove: 'https://' | remove: 'http://' }}');">-->
-<h4><a href="{{ post.external_url }}" onclick="captureOutboundLink(this); return false;">{{ post.title }} &#8599;</a>&nbsp;<a href="{{ post.url }}"><small><time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: "%-d %B %Y" }}</time></small></a>&nbsp;<a href="{{ post.url }}">&#9733;</a></h4>
-
+  <!--<a href="{{ post.external_url }}" onclick="sa_event('linked-{{ post.external_url | remove: 'https://' | remove: 'http://' }}');">-->
+  <h4>
+    <a href="{{ post.url }}">&#8734;</a>&nbsp;
+    <a href="{{ post.external_url }}" onclick="captureOutboundLink(this); return false;">{{ post.title }} &#8599;</a>&nbsp;
+    <a href="{{ post.url }}"><small><time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: "%-d %B %Y" }}</time></small></a>
+  </h4>
 {% else %}
-
-<a href="{{ post.url }}">
-  <h4>{{ post.title }}
-  <small><time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: "%-d %B %Y" }}</time></small></h4>
-</a>
-
+  <h4>
+    <a href="{{ post.url }}">{{ post.title }}</a>&nbsp;
+    <a href="{{ post.url }}"><small><time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: "%-d %B %Y" }}</time></small></a>
+  </h4>
 {% endif %} 
