--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -32,7 +32,7 @@ a.external-link {
 }
 
 .external-link::after {
-  content: "&#8599;";
+  content: "\2197";
 }
 
 // Meta data line below post title
